tests/baselines/reference/symbolType9.errors.txt
symbolType9.ts(3,1): error TS2367: This comparison appears to be unintentional because the types 'symbol' and 'boolean' have no overlap.
symbolType9.ts(5,1): error TS2367: This comparison appears to be unintentional because the types 'number' and 'symbol' have no overlap.
symbolType9.ts(7,1): error TS2367: This comparison appears to be unintentional because the types 'symbol' and 'number' have no overlap.
symbolType9.ts(9,1): error TS2367: This comparison appears to be unintentional because the types 'boolean' and 'symbol' have no overlap.


==== symbolType9.ts (4 errors) ====
    var s = Symbol.for("equal");
    s == s;
    s == true;
    ~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'symbol' and 'boolean' have no overlap.
    s != s;
    0 != s;
    ~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'number' and 'symbol' have no overlap.
    s === s;
    s === 1;
    ~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'symbol' and 'number' have no overlap.
    s !== s;
    false !== s;
    ~~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'boolean' and 'symbol' have no overlap.